# SealLang

./: CMakeLists.txt  README.md
.github/workflows/: test.yml
lib/inc/: Context.h  ErrorManager.h  Exception.h  Executor.h  Interpreter.h  Lexer.h  Parser.h  Value.h
lib/src/: ErrorManager.cpp  Exception.cpp  Executor.cpp  Interpreter.cpp  Lexer.cpp  Parser.cpp
src/: main.cpp
test/: interpreter_test.cpp  lexer_test.cpp  parser_test.cpp
